Paper 1.21.7 Update (#7983)